# spark-lakehouse

./: .gitignore  AGENTS.md  README.md  lakehouse_homelab.code-workspace  pyproject.toml  test_push.py
benchmarks/queries/: 01_partition_row_count.sql  02_quality_result_summary.sql  03_gold_revenue_check.sql  04_partition_financial_aggregation.sql  05_pickup_location_aggregation.sql  06_broad_silver_scan.sql
benchmarks/workloads/: smoke.toml
clients/: airflow_client.py  spark_history_client.py  trino_client.py  utils.py
conf/environments/: onprem.toml
docs/: hybrid_lakehouse_aws_migration_4_week_plan.md  on_prem_hybrid_cloud_comparative_study_plan.md  pandera_silver_dq_gold_revenue_plan.md  reproducible_benchmark_pipeline_plan.md  spark_airflow_taxi_batch_simulation.md
docs/research_plan/: hybrid_storage_tradeoff_research_plan.md  phase1_benchmark_harness_plan.md  pre_hybrid_benchmark_remediation_plan.md
notebooks/: data_quality.ipynb  eda.ipynb  nb1.ipynb  nb2.ipynb
orchestration/dags/: benchmark_pipeline.py  green_trip_data.py  trips_data.py  yellow_trip_data.py
orchestration/dags/utils/: common.py
scripts/benchmarks/: run_benchmark.py
scripts/bootstrap/: initial_load.py
src/etl/jobs/: nyc_tlc_gold_revenue.py  nyc_tlc_silver_quality.py  nyc_tlc_silver_quality_schemas.py  nyc_tlc_stg.py  nyc_tlc_stg_green_tripdata.py  nyc_tlc_stg_trip_data.py  nyc_tlc_stg_yellow_tripdata.py
src/etl/quality/: __init__.py  green_trips_schema.py  yellow_trips_schema.py
src/etl/schemas/: nyc_tlc_silver_quality_schemas.py
src/utils/: logger.py
(+12 files in other folders)
