[project]
name = "lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.41.2",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyspark==4.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
