[project]
name = "lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.41.2",
    "dbt-core>=1.11.4",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyspark==4.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.14",
]
