[project]
name = "lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "apache-airflow==3.2.1",
    "apache-airflow-providers-apache-spark==6.0.1",
    "boto3==1.41.2",
    "dbt-core==1.11.4",
    "ipykernel==7.1.0",
    "pandas==2.3.3",
    "pyarrow==22.0.0",
    "pydeequ==1.5.0",
    "pyspark==3.5.6",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "ruff==0.14.14",
]
